--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     </div>
                 </div>
             </div>
-            <section class="content width-content">
+            <section class="content-second width-content">
                 <h2>アクセス</h2>
                 <div class="footer effect">
                     <div class="footer__infomation">
@@ -293,7 +293,7 @@
                                 静岡県静岡市駿河区◯◯&emsp;<br
                                     class="mobile-br"
                                 />
-                                TEL 0120-000-0000
+                                静岡駅南口から徒歩10分
                             </p>
                         </div>
                         <div class="center-box">
