--- a/works.html
+++ b/works.html
@@ -98,11 +98,13 @@
                     <div class="img_right">
                         <img src="img/1381640_s.jpg" alt="" />
                     </div>
+                    <div class="box-bottom">
                     <p>
                         予防接種は、院内感染をできる限り減らすように、原則として専用の時間帯にて対応させていただいてます。予約の際は直接当院へご連絡頂き、日時・時間帯の調整をさせていただきます。
                         <br />
                         ご持参いただくものとしては、予防接種シール、母子健康手帳、保険証、診察券が必要となりますので、あらかじめご準備をお願いいたします。また、予防接種は生後2ヶ月から可能となりますのでお間違いのないようおねがいいたします。
                     </p>
+                </div>
                 </div>
             <footer>
                 <address>©2023 naito children's clinic. All Rights Reserved</address>
