--- a/index.html
+++ b/index.html
@@ -182,19 +182,19 @@
                     </div>
                     <ul>
                         <li class="effect d_02">
-                            <a href="news.html"
+                            <a href="works.html#child"
                                 ><img src="img/26956869_s.jpg" alt="" />
                                 <div>小児科</div></a
                             >
                         </li>
                         <li class="effect d_04">
-                            <a href="about.html"
+                            <a href="works.html#child-2"
                                 ><img src="img/4461392_s.jpg" alt="" />
                                 <div>乳幼児健診</div></a
                             >
                         </li>
                         <li class="effect d_06">
-                            <a href="works.html"
+                            <a href="works.html#child-3"
                                 ><img src="img/1381640_s.jpg" alt="" />
                                 <div>予防接種</div></a
                             >
