--- a/works.html
+++ b/works.html
@@ -72,7 +72,7 @@
             </div>
 
             <div class="content">
-                <div class="cont_wrap effect">
+                <div class="cont_wrap effect" id="child">
                     <h2>診療内容</h2>
                     <h3>小児科</h3>
                     <div class="img_right">
@@ -83,7 +83,7 @@
                         <br />また、夜間や休日に具合の悪くなった場合は、時間帯によって急病センターや小児科二次救急当番病院、小児科当番医（クリニック）にて対応となる場合がございます。
                     </p>
                 </div>
-                <div class="cont_wrap effect">
+                <div class="cont_wrap effect" id="child-2">
                     <h3>乳幼児健診</h3>
                     <div class="img_left">
                         <img src="img/4461392_s.jpg" alt="" />
@@ -93,21 +93,24 @@
                         そのため、日頃の子育てに関して疑問に思っているや些細なことでも、気軽に相談してください。お子様の成長を評価するため、ご家族の情報がとても大切になります。
                     </p>
                 </div>
-                <div class="cont_wrap effect">
+                <div class="cont_wrap effect" id="child-3">
                     <h3>予防接種</h3>
                     <div class="img_right">
                         <img src="img/1381640_s.jpg" alt="" />
                     </div>
                     <div class="box-bottom">
-                    <p>
-                        予防接種は、院内感染をできる限り減らすように、原則として専用の時間帯にて対応させていただいてます。予約の際は直接当院へご連絡頂き、日時・時間帯の調整をさせていただきます。
-                        <br />
-                        ご持参いただくものとしては、予防接種シール、母子健康手帳、保険証、診察券が必要となりますので、あらかじめご準備をお願いいたします。また、予防接種は生後2ヶ月から可能となりますのでお間違いのないようおねがいいたします。
-                    </p>
+                        <p>
+                            予防接種は、院内感染をできる限り減らすように、原則として専用の時間帯にて対応させていただいてます。予約の際は直接当院へご連絡頂き、日時・時間帯の調整をさせていただきます。
+                            <br />
+                            ご持参いただくものとしては、予防接種シール、母子健康手帳、保険証、診察券が必要となりますので、あらかじめご準備をお願いいたします。また、予防接種は生後2ヶ月から可能となりますのでお間違いのないようおねがいいたします。
+                        </p>
+                    </div>
                 </div>
-                </div>
+            </div>
             <footer>
-                <address>©2023 naito children's clinic. All Rights Reserved</address>
+                <address>
+                    ©2023 naito children's clinic. All Rights Reserved
+                </address>
             </footer>
             <div class="to_top">
                 <a href="#"
