--- a/concept.html
+++ b/concept.html
@@ -1,156 +1,146 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8" />
+	<head>
+		<meta charset="utf-8" />
 
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
-        />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 
-        <title>ないとうこどもクリニック</title>
-        <meta name="Keywords" content="" />
-        <meta name="Description" content="" />
+		<title>ないとうこどもクリニック</title>
+		<meta name="Keywords" content="" />
+		<meta name="Description" content="" />
 
-        <link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-        <link
-            href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
-            rel="stylesheet"
-        />
-        <link
-            href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-            rel="stylesheet"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="css/addstyle.css" />
-        <link rel="stylesheet" href="css/micromodal.css" />
-        <link rel="stylesheet" href="css/erikastyle.css" />
-    </head>
-    <body>
-        <div class="scroll-fix">
-            <header>
-                <div class="bg_bl"></div>
+		<link
+			href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
+			rel="stylesheet" />
+		<link
+			href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+			rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="css/addstyle.css" />
+		<link rel="stylesheet" href="css/micromodal.css" />
+		<link rel="stylesheet" href="css/erikastyle.css" />
+	</head>
+	<body>
+		<div class="scroll-fix">
+			<header>
+				<div class="bg_bl"></div>
 
-                <h1>
-                    <a href="index.html"
-                        ><img src="img/naito-child-clinic-logo.png"
-                    /></a>
-                </h1>
+				<h1>
+					<a href="index.html"><img src="img/naito-child-clinic-logo.png" /></a>
+				</h1>
 
-                <a class="menu_btn">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </a>
+				<a class="menu_btn">
+					<span class="top"></span>
+					<span class="middle"></span>
+					<span class="bottom"></span>
+				</a>
 
-                <nav id="g_navi">
-                    <ul>
-                        <li>
-                            <a href="index.html">HOME</a>
-                        </li>
-                        <li><a href="concept.html">当院について</a></li>
-                        <li><a href="works.html">診療内容</a></li>
-                        <li><a href="news.html">お知らせ/コラム</a></li>
-                        <li><a href="contact.html">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </header>
+				<nav id="g_navi">
+					<ul>
+						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li><a href="concept.html">当院について</a></li>
+						<li><a href="works.html">診療内容</a></li>
+						<li><a href="news.html">お知らせ/コラム</a></li>
+						<li><a href="contact.html">お問い合わせ</a></li>
+					</ul>
+				</nav>
+			</header>
 
-            <div id="sub_top" class="concept">当院について</div>
+			<div id="sub_top" class="concept">当院について</div>
 
-            <div class="pankuzu">
-                <ul>
-                    <li>
-                        <a href="index.html"><i class="fas fa-home"></i>HOME</a>
-                    </li>
-                    <li>当院について</li>
-                </ul>
-            </div>
+			<div class="pankuzu">
+				<ul>
+					<li>
+						<a href="index.html"><i class="fas fa-home"></i>HOME</a>
+					</li>
+					<li>当院について</li>
+				</ul>
+			</div>
 
-            <div class="content">
-                <div class="cont_wrap_effect">
-                    <h2>私たちの目指すもの</h2>
-                    <div class="cont_wrap_effect-text">
-                        <div class="effect-box">
-                            <p>
-                                当院が目指していることは3つあります。<br /><br />
-                                1.
-                                こども達とご家族の笑顔のために最善の医療を提供します。<br />
-                                2.
-                                こども達の主治医として、成人になるまでの成長と発達をサポートします。<br />
-                                3.
-                                みなさまが気軽に受診できるクリニックを目指します。
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="obi_001 home-concept-wrapper">
-                    <div class="home-concept-box">
-                        <h2 class="effect">
-                            大切なおこさまのために<br />
-                            安全で安心できる医療を提供します
-                        </h2>
-                        <p class="effect mobile-small-text">
-                            当院では大切なお子様が健やかに成長し、<br />
-                            ご家族が安心して過ごせるよう適切な診断と治療を提供します。<br />
-                            <span class="mobile-small-text-1"
-                                >『こども達の未来を救う小児科医』</span
-                            >として、<br />
-                            大切なお子様の主治医になれるよう努めていきます。
-                        </p>
-                    </div>
-                </div>
-                <div class="cont_wrap effect">
-                    <h2>院長ご挨拶</h2>
-                    <h3>未来ある子どもたちを救う</h3>
-                    <div>
-                        <div class="img_right">
-                            <img src="img/AdobeStock_501287816.jpeg" alt="" />
-                            <p>院長：内藤　恵莉香</p>
-                        </div>
-                        <p>
-                            はじめまして、院長の内藤恵莉香と申します。<br />
-                            大学院卒業後より10年間しずおか県立こども病院に勤め、
-                            2021年3月3日静岡市駿河区に『ないとうこどもクリニック』を開業いたしました。<br />
-                            こどもが大好きで、私の生まれ育った場所で沢山の子ども達を救いたいと思っています。
-                            育児での不安や、分からないことなど病気以外でお困りのことでも、どんなことでも気軽にご相談ください。<br />
-                            <br />
-                            末永く地域の皆様に愛されるクリニックを目指して頑張りますので、どうぞよろしくお願いいたします。
-                        </p>
-                    </div>
-                </div>
-                <div class="cont_wrap effect">
-                    <h3>初めて受診される方</h3>
-                    <div class="img_left">
-                        <img src="img/AdobeStock_608062503.jpeg" alt="" />
-                    </div>
-                    <p>
-                        初めてお越しいただく方は、当院へ直接ご連絡ください。<br />
-                        健康保険証、母子手帳、お薬手帳、紹介状（持っている方）が必要となりますので、あらかじめご準備してから受診をお願い致します。
-                    </p>
-                </div>
-            </div>
-            <footer>
-                <address>
-                    ©2023 naito children's clinic. All Rights Reserved
-                </address>
-            </footer>
+			<div class="content">
+				<div class="cont_wrap_effect">
+					<h2>私たちの目指すもの</h2>
+					<div class="cont_wrap_effect-text">
+						<div class="effect-box">
+							<p>
+								当院が目指していることは3つあります。<br /><br />
+								1. こども達とご家族の笑顔のために最善の医療を提供します。<br />
+								2.
+								こども達の主治医として、成人になるまでの成長と発達をサポートします。<br />
+								3. みなさまが気軽に受診できるクリニックを目指します。
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="obi_001 home-concept-wrapper">
+					<div class="home-concept-box">
+						<h2 class="effect">
+							大切なおこさまのために<br />
+							安全で安心できる医療を提供します
+						</h2>
+						<p class="effect mobile-small-text">
+							当院では大切なお子様が健やかに成長し、<br />
+							ご家族が安心して過ごせるよう適切な診断と治療を提供します。<br />
+							<span class="mobile-small-text-1"
+								>『こども達の未来を救う小児科医』</span
+							>として、<br />
+							大切なお子様の主治医になれるよう努めていきます。
+						</p>
+					</div>
+				</div>
+				<div class="cont_wrap effect">
+					<h2>院長ご挨拶</h2>
+					<h3>未来ある子どもたちを救う</h3>
+					<div>
+						<div class="img_right">
+							<img src="img/AdobeStock_501287816.jpeg" alt="" />
+							<p>院長：内藤　恵莉香</p>
+						</div>
+						<p>
+							はじめまして、院長の内藤恵莉香と申します。<br />
+							大学院卒業後より10年間しずおか県立こども病院に勤め、
+							2021年3月3日静岡市駿河区に『ないとうこどもクリニック』を開業いたしました。<br />
+							こどもが大好きで、私の生まれ育った場所で沢山の子ども達を救いたいと思っています。
+							育児での不安や、分からないことなど病気以外でお困りのことでも、どんなことでも気軽にご相談ください。<br />
+							<br />
+							末永く地域の皆様に愛されるクリニックを目指して頑張りますので、どうぞよろしくお願いいたします。
+						</p>
+					</div>
+				</div>
+				<div class="cont_wrap effect">
+					<h3>初めて受診される方</h3>
+					<div class="img_left">
+						<img src="img/AdobeStock_608062503.jpeg" alt="" />
+					</div>
+					<p>
+						初めてお越しいただく方は、当院へ直接ご連絡ください。<br />
+						健康保険証、母子手帳、お薬手帳、紹介状（持っている方）が必要となりますので、あらかじめご準備してから受診をお願い致します。
+					</p>
+				</div>
+			</div>
+			<footer>
+				<address>©2023 naito children's clinic. All Rights Reserved</address>
+			</footer>
 
-            <div class="to_top">
-                <a href="#"
-                    ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
-                ></a>
-            </div>
-        </div>
+			<div class="to_top">
+				<a href="#"
+					><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
+				></a>
+			</div>
+		</div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/jquery.inview.min.js"></script>
-        <script src="js/script.js"></script>
-    </body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="js/jquery.inview.min.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
