--- a/contact.html
+++ b/contact.html
@@ -1,210 +1,178 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8" />
+	<head>
+		<meta charset="utf-8" />
 
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
-        />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 
-        <title>ないとうこどもクリニック</title>
-        <meta name="Keywords" content="" />
-        <meta name="Description" content="" />
+		<title>ないとうこどもクリニック</title>
+		<meta name="Keywords" content="" />
+		<meta name="Description" content="" />
 
-        <link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-        <link
-            href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
-            rel="stylesheet"
-        />
-        <link
-            href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-            rel="stylesheet"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="css/mailform.css" />
-        <link rel="stylesheet" href="css/addstyle.css" />
-        <link rel="stylesheet" href="css/micromodal.css" />
-        <link rel="stylesheet" href="css/erikastyle.css"/>
-    </head>
-    <body>
-        <div class="scroll-fix">
-            <header>
-                <div class="bg_bl"></div>
+		<link
+			href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
+			rel="stylesheet" />
+		<link
+			href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+			rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="css/mailform.css" />
+		<link rel="stylesheet" href="css/addstyle.css" />
+		<link rel="stylesheet" href="css/micromodal.css" />
+		<link rel="stylesheet" href="css/erikastyle.css" />
+	</head>
+	<body>
+		<div class="scroll-fix">
+			<header>
+				<div class="bg_bl"></div>
 
-                <h1>
-                    <a href="index.html"
-                        ><img src="img/naito-child-clinic-logo.png"
-                    /></a>
-                </h1>
+				<h1>
+					<a href="index.html"><img src="img/naito-child-clinic-logo.png" /></a>
+				</h1>
 
-                <a class="menu_btn">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </a>
+				<a class="menu_btn">
+					<span class="top"></span>
+					<span class="middle"></span>
+					<span class="bottom"></span>
+				</a>
 
-                <nav id="g_navi">
-                    <ul>
-                        <li>
-                            <a href="index.html">HOME</a>
-                        </li>
-                        <li><a href="concept.html">当院について</a></li>
-                        <li><a href="works.html">診療内容</a></li>
-                        <li><a href="news.html">お知らせ/コラム</a></li>
-                        <li><a href="contact.html">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </header>
+				<nav id="g_navi">
+					<ul>
+						<li>
+							<a href="index.html">HOME</a>
+						</li>
+						<li><a href="concept.html">当院について</a></li>
+						<li><a href="works.html">診療内容</a></li>
+						<li><a href="news.html">お知らせ/コラム</a></li>
+						<li><a href="contact.html">お問い合わせ</a></li>
+					</ul>
+				</nav>
+			</header>
+			<!-- </div> -->
 
-            <div id="sub_top" class="contact">お問い合わせ</div>
+			<div id="sub_top" class="contact">お問い合わせ</div>
 
-            <div class="pankuzu">
-                <ul>
-                    <li>
-                        <a href="index.html"><i class="fas fa-home"></i>HOME</a>
-                    </li>
-                    <li>お問い合わせ</li>
-                </ul>
-            </div>
+			<div class="pankuzu">
+				<ul>
+					<li>
+						<a href="index.html"><i class="fas fa-home"></i>HOME</a>
+					</li>
+					<li>お問い合わせ</li>
+				</ul>
+			</div>
 
-            <div class="content">
-                <div class="cont_wrap effect">
-                    <h2>お問い合わせ</h2>
-                    <div class="center-box">
-                    <div>
-                        お問い合わせはこちらからになります。<br>お急ぎの方や直接お話しされたい方は、当院へご連絡ください。電話番号は下記に記載してあります。
-                    </div>
-                    </div>
-                </div>
-                    <form
-                        action="php/mailform.php"
-                        method="post"
-                        id="mail_form"
-                    >
-                        <dl>
-                            <dt>お名前<span>Your Name</span></dt>
-                            <dd class="required">
-                                <input
-                                    type="text"
-                                    id="name_1"
-                                    name="name_1"
-                                    value=""
-                                />
-                            </dd>
+			<div class="content">
+				<div class="cont_wrap effect">
+					<h2>お問い合わせ</h2>
+					<div class="center-box">
+						<div>
+							お問い合わせはこちらからになります。<br />お急ぎの方や直接お話しされたい方は、当院へご連絡ください。電話番号は下記に記載してあります。
+						</div>
+					</div>
+				</div>
+				<form action="php/mailform.php" method="post" id="mail_form">
+					<dl>
+						<dt>お名前<span>Your Name</span></dt>
+						<dd class="required">
+							<input type="text" id="name_1" name="name_1" value="" />
+						</dd>
 
-                            <dt>メールアドレス<span>Mail Address</span></dt>
-                            <dd class="required">
-                                <input
-                                    type="email"
-                                    id="mail_address"
-                                    name="mail_address"
-                                    value=""
-                                />
-                            </dd>
+						<dt>メールアドレス<span>Mail Address</span></dt>
+						<dd class="required">
+							<input
+								type="email"
+								id="mail_address"
+								name="mail_address"
+								value="" />
+						</dd>
 
-                            <dt>
-                                メールアドレス<br />(確認用)<span
-                                    >Mail Address Confirm</span
-                                >
-                            </dt>
-                            <dd class="required">
-                                <input
-                                    type="email"
-                                    id="mail_address_confirm"
-                                    name="mail_address_confirm"
-                                    value=""
-                                />
-                            </dd>
+						<dt>
+							メールアドレス<br />(確認用)<span>Mail Address Confirm</span>
+						</dt>
+						<dd class="required">
+							<input
+								type="email"
+								id="mail_address_confirm"
+								name="mail_address_confirm"
+								value="" />
+						</dd>
 
-                            <dt>電話番号<span>Phone Number</span></dt>
-                            <dd>
-                                <input
-                                    type="tel"
-                                    id="phone"
-                                    name="phone"
-                                    value=""
-                                />
-                            </dd>
+						<dt>電話番号<span>Phone Number</span></dt>
+						<dd>
+							<input type="tel" id="phone" name="phone" value="" />
+						</dd>
 
-                            <dt>返信方法のご希望<span>Response</span></dt>
-                            <dd>
-                                <ul>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="電話での返信を希望"
-                                            />電話での返信を希望</label
-                                        >
-                                    </li>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="メールでの返信を希望"
-                                            />メールでの返信を希望</label
-                                        >
-                                    </li>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="返信不要"
-                                            />返信不要</label
-                                        >
-                                    </li>
-                                </ul>
-                            </dd>
+						<dt>返信方法のご希望<span>Response</span></dt>
+						<dd>
+							<ul>
+								<li>
+									<label
+										><input
+											type="checkbox"
+											class="response"
+											name="response[]"
+											value="電話での返信を希望" />電話での返信を希望</label
+									>
+								</li>
+								<li>
+									<label
+										><input
+											type="checkbox"
+											class="response"
+											name="response[]"
+											value="メールでの返信を希望" />メールでの返信を希望</label
+									>
+								</li>
+								<li>
+									<label
+										><input
+											type="checkbox"
+											class="response"
+											name="response[]"
+											value="返信不要" />返信不要</label
+									>
+								</li>
+							</ul>
+						</dd>
 
-                            <dt>
-                                お問い合わせの内容<span>Mail Contents</span>
-                            </dt>
-                            <dd class="required">
-                                <textarea
-                                    id="mail_contents"
-                                    name="mail_contents"
-                                    cols="40"
-                                    rows="5"
-                                ></textarea>
-                            </dd>
-                        </dl>
+						<dt>お問い合わせの内容<span>Mail Contents</span></dt>
+						<dd class="required">
+							<textarea
+								id="mail_contents"
+								name="mail_contents"
+								cols="40"
+								rows="5"></textarea>
+						</dd>
+					</dl>
 
-                        <p id="form_submit">
-                            <input
-                                type="button"
-                                id="form_submit_button"
-                                value="送信する"
-                            />
-                        </p>
-                    </form>
-                </div>
-            </div>
-            <footer>
-                <address>©2023 naito children's clinic. All Rights Reserved</address>
-            </footer>
+					<p id="form_submit">
+						<input type="button" id="form_submit_button" value="送信する" />
+					</p>
+				</form>
+			</div>
+			<!-- </div> -->
 
-            <div class="to_top">
-                <a href="#"
-                    ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
-                ></a>
-            </div>
-        </div>
+			<footer>
+				<address>©2023 naito children's clinic. All Rights Reserved</address>
+			</footer>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/jquery.inview.min.js"></script>
-        <script src="js/script.js"></script>
-    </body>
+			<div class="to_top">
+				<a href="#"
+					><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
+				></a>
+			</div>
+		</div>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="js/jquery.inview.min.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
