--- a/concept.html
+++ b/concept.html
@@ -9,6 +9,11 @@
         />
 
         <title>ないとうこどもクリニック</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="img/naito-child-clinic-favicon.png"
+        />
         <meta name="Keywords" content="" />
         <meta name="Description" content="" />
 
