--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,11 @@
         />
 
         <title>ないとうこどもクリニック</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="img/naito-child-clinic-favicon.png"
+        />
         <meta name="Keywords" content="" />
         <meta name="Description" content="" />
 
@@ -31,176 +36,160 @@
         <link rel="stylesheet" href="css/mailform.css" />
         <link rel="stylesheet" href="css/addstyle.css" />
         <link rel="stylesheet" href="css/micromodal.css" />
-        <link rel="stylesheet" href="css/erikastyle.css"/>
+        <link rel="stylesheet" href="css/erikastyle.css" />
     </head>
     <body>
-        <div class="scroll-fix">
-            <header>
-                <div class="bg_bl"></div>
+        <header>
+            <div class="bg_bl"></div>
 
-                <h1>
-                    <a href="index.html"
-                        ><img src="img/naito-child-clinic-logo.png"
-                    /></a>
-                </h1>
+            <h1>
+                <a href="index.html"
+                    ><img src="img/naito-child-clinic-logo.png"
+                /></a>
+            </h1>
 
-                <a class="menu_btn">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </a>
+            <a class="menu_btn">
+                <span class="top"></span>
+                <span class="middle"></span>
+                <span class="bottom"></span>
+            </a>
 
-                <nav id="g_navi">
-                    <ul>
-                        <li>
-                            <a href="index.html">HOME</a>
-                        </li>
-                        <li><a href="concept.html">当院について</a></li>
-                        <li><a href="works.html">診療内容</a></li>
-                        <li><a href="news.html">お知らせ/コラム</a></li>
-                        <li><a href="contact.html">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </header>
-
-            <div id="sub_top" class="contact">お問い合わせ</div>
-
-            <div class="pankuzu">
+            <nav id="g_navi">
                 <ul>
                     <li>
-                        <a href="index.html"><i class="fas fa-home"></i>HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
-                    <li>お問い合わせ</li>
+                    <li><a href="concept.html">当院について</a></li>
+                    <li><a href="works.html">診療内容</a></li>
+                    <li><a href="news.html">お知らせ/コラム</a></li>
+                    <li><a href="contact.html">お問い合わせ</a></li>
                 </ul>
-            </div>
+            </nav>
+        </header>
 
-            <div class="content">
-                <div class="cont_wrap effect">
-                    <h2>お問い合わせ</h2>
-                    <div class="center-box">
+        <div id="sub_top" class="contact">お問い合わせ</div>
+
+        <div class="pankuzu">
+            <ul>
+                <li>
+                    <a href="index.html"><i class="fas fa-home"></i>HOME</a>
+                </li>
+                <li>お問い合わせ</li>
+            </ul>
+        </div>
+
+        <div class="content">
+            <div class="cont_wrap effect">
+                <h2>お問い合わせ</h2>
+                <div class="center-box">
                     <div>
-                        お問い合わせはこちらからになります。<br>お急ぎの方や直接お話しされたい方は、当院へご連絡ください。電話番号は下記に記載してあります。
-                    </div>
+                        お問い合わせはこちらからになります。<br />お急ぎの方や直接お話しされたい方は、当院へご連絡ください。電話番号は下記に記載してあります。
                     </div>
                 </div>
-                    <form
-                        action="php/mailform.php"
-                        method="post"
-                        id="mail_form"
-                    >
-                        <dl>
-                            <dt>お名前<span>Your Name</span></dt>
-                            <dd class="required">
-                                <input
-                                    type="text"
-                                    id="name_1"
-                                    name="name_1"
-                                    value=""
-                                />
-                            </dd>
+            </div>
+            <form action="php/mailform.php" method="post" id="mail_form">
+                <dl>
+                    <dt>お名前<span>Your Name</span></dt>
+                    <dd class="required">
+                        <input type="text" id="name_1" name="name_1" value="" />
+                    </dd>
 
-                            <dt>メールアドレス<span>Mail Address</span></dt>
-                            <dd class="required">
-                                <input
-                                    type="email"
-                                    id="mail_address"
-                                    name="mail_address"
-                                    value=""
-                                />
-                            </dd>
+                    <dt>メールアドレス<span>Mail Address</span></dt>
+                    <dd class="required">
+                        <input
+                            type="email"
+                            id="mail_address"
+                            name="mail_address"
+                            value=""
+                        />
+                    </dd>
 
-                            <dt>
-                                メールアドレス<br />(確認用)<span
-                                    >Mail Address Confirm</span
+                    <dt>
+                        メールアドレス<br />(確認用)<span
+                            >Mail Address Confirm</span
+                        >
+                    </dt>
+                    <dd class="required">
+                        <input
+                            type="email"
+                            id="mail_address_confirm"
+                            name="mail_address_confirm"
+                            value=""
+                        />
+                    </dd>
+
+                    <dt>電話番号<span>Phone Number</span></dt>
+                    <dd>
+                        <input type="tel" id="phone" name="phone" value="" />
+                    </dd>
+
+                    <dt>返信方法のご希望<span>Response</span></dt>
+                    <dd>
+                        <ul>
+                            <li>
+                                <label
+                                    ><input
+                                        type="checkbox"
+                                        class="response"
+                                        name="response[]"
+                                        value="電話での返信を希望"
+                                    />電話での返信を希望</label
                                 >
-                            </dt>
-                            <dd class="required">
-                                <input
-                                    type="email"
-                                    id="mail_address_confirm"
-                                    name="mail_address_confirm"
-                                    value=""
-                                />
-                            </dd>
+                            </li>
+                            <li>
+                                <label
+                                    ><input
+                                        type="checkbox"
+                                        class="response"
+                                        name="response[]"
+                                        value="メールでの返信を希望"
+                                    />メールでの返信を希望</label
+                                >
+                            </li>
+                            <li>
+                                <label
+                                    ><input
+                                        type="checkbox"
+                                        class="response"
+                                        name="response[]"
+                                        value="返信不要"
+                                    />返信不要</label
+                                >
+                            </li>
+                        </ul>
+                    </dd>
 
-                            <dt>電話番号<span>Phone Number</span></dt>
-                            <dd>
-                                <input
-                                    type="tel"
-                                    id="phone"
-                                    name="phone"
-                                    value=""
-                                />
-                            </dd>
+                    <dt>お問い合わせの内容<span>Mail Contents</span></dt>
+                    <dd class="required">
+                        <textarea
+                            id="mail_contents"
+                            name="mail_contents"
+                            cols="40"
+                            rows="5"
+                        ></textarea>
+                    </dd>
+                </dl>
 
-                            <dt>返信方法のご希望<span>Response</span></dt>
-                            <dd>
-                                <ul>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="電話での返信を希望"
-                                            />電話での返信を希望</label
-                                        >
-                                    </li>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="メールでの返信を希望"
-                                            />メールでの返信を希望</label
-                                        >
-                                    </li>
-                                    <li>
-                                        <label
-                                            ><input
-                                                type="checkbox"
-                                                class="response"
-                                                name="response[]"
-                                                value="返信不要"
-                                            />返信不要</label
-                                        >
-                                    </li>
-                                </ul>
-                            </dd>
+                <p id="form_submit">
+                    <input
+                        type="button"
+                        id="form_submit_button"
+                        value="送信する"
+                    />
+                </p>
+            </form>
+        </div>
 
-                            <dt>
-                                お問い合わせの内容<span>Mail Contents</span>
-                            </dt>
-                            <dd class="required">
-                                <textarea
-                                    id="mail_contents"
-                                    name="mail_contents"
-                                    cols="40"
-                                    rows="5"
-                                ></textarea>
-                            </dd>
-                        </dl>
+        <footer>
+            <address>
+                ©2023 naito children's clinic. All Rights Reserved
+            </address>
+        </footer>
 
-                        <p id="form_submit">
-                            <input
-                                type="button"
-                                id="form_submit_button"
-                                value="送信する"
-                            />
-                        </p>
-                    </form>
-                </div>
-            </div>
-            <footer>
-                <address>©2023 naito children's clinic. All Rights Reserved</address>
-            </footer>
-
-            <div class="to_top">
-                <a href="#"
-                    ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
-                ></a>
-            </div>
+        <div class="to_top">
+            <a href="#"
+                ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
+            ></a>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
