--- a/coram.html
+++ b/coram.html
@@ -9,6 +9,11 @@
         />
 
         <title>ないとうこどもクリニック</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="img/naito-child-clinic-favicon.png"
+        />
         <meta name="Keywords" content="" />
         <meta name="Description" content="" />
 
@@ -32,57 +37,56 @@
         <link rel="stylesheet" href="css/micromodal.css" />
     </head>
     <body>
-        <div class="scroll-fix">
-            <header>
-                <div class="bg_bl"></div>
+        <header>
+            <div class="bg_bl"></div>
 
-                <h1>
-                    <a href="index.html"
-                        ><img src="img/naito-child-clinic-logo.png"
-                    /></a>
-                </h1>
+            <h1>
+                <a href="index.html"
+                    ><img src="img/naito-child-clinic-logo.png"
+                /></a>
+            </h1>
 
-                <a class="menu_btn">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </a>
+            <a class="menu_btn">
+                <span class="top"></span>
+                <span class="middle"></span>
+                <span class="bottom"></span>
+            </a>
 
-                <nav id="g_navi">
-                    <ul>
-                        <li>
-                            <a href="index.html">HOME</a>
-                        </li>
-                        <li><a href="concept.html">当院について</a></li>
-                        <li><a href="works.html">診療内容</a></li>
-                        <li><a href="news.html">お知らせ/コラム</a></li>
-                        <li><a href="contact.html">お問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </header>
-
-            <div id="sub_top" class="sample">コラム</div>
-
-            <div class="pankuzu">
+            <nav id="g_navi">
                 <ul>
                     <li>
-                        <a href="index.html"><i class="fas fa-home"></i>HOME</a>
+                        <a href="index.html">HOME</a>
                     </li>
-                    <li>
-                        <a href="news.html">お知らせ/コラム一覧</a>
-                    </li>
-                    <li>コラム</li>
+                    <li><a href="concept.html">当院について</a></li>
+                    <li><a href="works.html">診療内容</a></li>
+                    <li><a href="news.html">お知らせ/コラム</a></li>
+                    <li><a href="contact.html">お問い合わせ</a></li>
                 </ul>
-            </div>
+            </nav>
+        </header>
 
-            <div class="content">
-                <div class="cont_wrap effect">
-                    <h2>ハロウィンイベント</h2>
+        <div id="sub_top" class="sample">コラム</div>
 
-                    <div class="img_center">
-                        <img src="img/27291639_s.jpg" alt="" />
-                    </div>
-                    <div class="coram-text-box">
+        <div class="pankuzu">
+            <ul>
+                <li>
+                    <a href="index.html"><i class="fas fa-home"></i>HOME</a>
+                </li>
+                <li>
+                    <a href="news.html">お知らせ/コラム一覧</a>
+                </li>
+                <li>コラム</li>
+            </ul>
+        </div>
+
+        <div class="content">
+            <div class="cont_wrap effect">
+                <h2>ハロウィンイベント</h2>
+
+                <div class="img_center">
+                    <img src="img/27291639_s.jpg" alt="" />
+                </div>
+                <div class="coram-text-box">
                     <p>※これは2022年10月30日のハロウィンイベントの写真です</p>
 
                     <h3>こども達の笑顔溢れるハロウィン</h3>
@@ -98,9 +102,11 @@
                         お越しになる時は、こども達だけでなくお父さん・お母さんもぜひ仮装してきてくださいね。こどもから大人まで、みんなでハロウィンを楽しみましょう。
                     </p>
                 </div>
-                </div>
+            </div>
             <footer>
-                <address>©2023 naito children's clinic. All Rights Reserved</address>
+                <address>
+                    ©2023 naito children's clinic. All Rights Reserved
+                </address>
             </footer>
 
             <div class="to_top">
