--- a/coram.html
+++ b/coram.html
@@ -1,127 +1,118 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8" />
+	<head>
+		<meta charset="utf-8" />
 
-        <meta
-            name="viewport"
-            content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
-        />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 
-        <title>ないとうこどもクリニック</title>
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="img/naito-child-clinic-favicon.png"
-        />
-        <meta name="Keywords" content="" />
-        <meta name="Description" content="" />
+		<title>ないとうこどもクリニック</title>
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="img/naito-child-clinic-favicon.png" />
+		<meta name="Keywords" content="" />
+		<meta name="Description" content="" />
 
-        <link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-        <link
-            href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
-            rel="stylesheet"
-        />
-        <link
-            href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-            rel="stylesheet"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="css/addstyle.css" />
-        <link rel="stylesheet" href="css/micromodal.css" />
-    </head>
-    <body>
-        <header>
-            <div class="bg_bl"></div>
+		<link
+			href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css"
+			rel="stylesheet" />
+		<link
+			href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+			rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300;1,400;1,700&family=Mochiy+Pop+One&family=Montserrat:wght@500&family=Zen+Maru+Gothic&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="css/addstyle.css" />
+		<link rel="stylesheet" href="css/micromodal.css" />
+	</head>
+	<body>
+		<header>
+			<div class="bg_bl"></div>
 
-            <h1>
-                <a href="index.html"
-                    ><img src="img/naito-child-clinic-logo.png"
-                /></a>
-            </h1>
+			<h1>
+				<a href="index.html"><img src="img/naito-child-clinic-logo.png" /></a>
+			</h1>
 
-            <a class="menu_btn">
-                <span class="top"></span>
-                <span class="middle"></span>
-                <span class="bottom"></span>
-            </a>
+			<a class="menu_btn">
+				<span class="top"></span>
+				<span class="middle"></span>
+				<span class="bottom"></span>
+			</a>
 
-            <nav id="g_navi">
-                <ul>
-                    <li>
-                        <a href="index.html">HOME</a>
-                    </li>
-                    <li><a href="concept.html">当院について</a></li>
-                    <li><a href="works.html">診療内容</a></li>
-                    <li><a href="news.html">お知らせ/コラム</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </header>
+			<nav id="g_navi">
+				<ul>
+					<li>
+						<a href="index.html">HOME</a>
+					</li>
+					<li><a href="concept.html">当院について</a></li>
+					<li><a href="works.html">診療内容</a></li>
+					<li><a href="news.html">お知らせ/コラム</a></li>
+					<li><a href="contact.html">お問い合わせ</a></li>
+				</ul>
+			</nav>
+		</header>
 
-        <div id="sub_top" class="sample">コラム</div>
+		<div id="sub_top" class="">コラム</div>
 
-        <div class="pankuzu">
-            <ul>
-                <li>
-                    <a href="index.html"><i class="fas fa-home"></i>HOME</a>
-                </li>
-                <li>
-                    <a href="news.html">お知らせ/コラム一覧</a>
-                </li>
-                <li>コラム</li>
-            </ul>
-        </div>
+		<div class="pankuzu">
+			<ul>
+				<li>
+					<a href="index.html"><i class="fas fa-home"></i>HOME</a>
+				</li>
+				<li>
+					<a href="news.html">お知らせ/コラム一覧</a>
+				</li>
+				<li>コラム</li>
+			</ul>
+		</div>
 
-        <div class="content">
-            <div class="cont_wrap effect">
-                <h2>ハロウィンイベント</h2>
+		<div class="content">
+			<div class="cont_wrap effect">
+				<h2>ハロウィンイベント</h2>
 
-                <div class="img_center">
-                    <img src="img/27291639_s.jpg" alt="" />
-                </div>
-                <div class="coram-text-box">
-                    <p>※これは2022年10月30日のハロウィンイベントの写真です</p>
+				<div class="img_center">
+					<img src="img/27291639_s.jpg" alt="" />
+				</div>
+				<div class="coram-text-box">
+					<p>※これは2022年10月30日のハロウィンイベントの写真です</p>
 
-                    <h3>こども達の笑顔溢れるハロウィン</h3>
+					<h3>こども達の笑顔溢れるハロウィン</h3>
 
-                    <p>
-                        ハロウィンイベントも開院してから今年で3回目となります。こども達の笑顔が見たくて始めたイベントですが、毎年通院しているこども達から地域に住んでいるこども達まで、沢山のこども達が集まってくれます。<br />
-                        コロナによって大きなイベント事が減ってしまったり、大人数でわいわい楽しむ機会も少なくなってしまいました。そんなこども達に、みんなで集まって楽しむ機会を与えてあげたい思いもあり、これからもハロウィンイベントは続けていこうとおもっております。
-                    </p>
-                    <h3>Trick or Treat</h3>
+					<p>
+						ハロウィンイベントも開院してから今年で3回目となります。こども達の笑顔が見たくて始めたイベントですが、毎年通院しているこども達から地域に住んでいるこども達まで、沢山のこども達が集まってくれます。<br />
+						コロナによって大きなイベント事が減ってしまったり、大人数でわいわい楽しむ機会も少なくなってしまいました。そんなこども達に、みんなで集まって楽しむ機会を与えてあげたい思いもあり、これからもハロウィンイベントは続けていこうとおもっております。
+					</p>
+					<h3>Trick or Treat</h3>
 
-                    <p>
-                        院長に看護師、受付のスタッフ誰でもいいので、『トリックオアトリート』と言ってくれれば、おいしいお菓子をプレゼントします！<br />
-                        お越しになる時は、こども達だけでなくお父さん・お母さんもぜひ仮装してきてくださいね。こどもから大人まで、みんなでハロウィンを楽しみましょう。
-                    </p>
-                </div>
-            </div>
-            <footer>
-                <address>
-                    ©2023 naito children's clinic. All Rights Reserved
-                </address>
-            </footer>
+					<p>
+						院長に看護師、受付のスタッフ誰でもいいので、『トリックオアトリート』と言ってくれれば、おいしいお菓子をプレゼントします！<br />
+						お越しになる時は、こども達だけでなくお父さん・お母さんもぜひ仮装してきてくださいね。こどもから大人まで、みんなでハロウィンを楽しみましょう。
+					</p>
+				</div>
+			</div>
+			<footer>
+				<address>©2023 naito children's clinic. All Rights Reserved</address>
+			</footer>
 
-            <div class="to_top">
-                <a href="#"
-                    ><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
-                ></a>
-            </div>
-        </div>
+			<div class="to_top">
+				<a href="#"
+					><i class="fas fa-chevron-up" title="ページトップへ戻る"></i
+				></a>
+			</div>
+		</div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/jquery.inview.min.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
-        <script>
-            $("[data-fancybox]").fancybox();
-        </script>
-    </body>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="js/jquery.inview.min.js"></script>
+		<script src="js/script.js"></script>
+		<script src="js/jquery.fancybox.js"></script>
+		<script>
+			$("[data-fancybox]").fancybox();
+		</script>
+	</body>
 </html>
